--- a/TS_Xudong_Liu.tex
+++ b/TS_Xudong_Liu.tex
@@ -7,6 +7,7 @@
 \singlespacing
 
 \newcommand{\tit}[1]{\textit{#1}}
+\newcommand{\tbf}[1]{\textbf{#1}}
 
 \title{Teaching Statement\vspace{-0.4cm}}
 \author{Xudong Liu}
@@ -21,35 +22,35 @@ Born and raised in a family where parents were teachers, I was immersed in an en
 committed to academic achievement. They often spoke proudly about their students who
 struggled through tough days early on, overcame the hurdles with support of teachers, and 
 achieved excellence inside and outside of school. 
-Being on both sides of the podium myself, I truly believe that
-teaching is quintessential in helping people make a positive difference in their lives.
+Being on both sides of the podium myself, \tbf{I truly believe that
+teaching is quintessential in helping people make a positive difference in their lives.}
 
-The ultimate goal of college teaching is to help students to grow to independent 
-and critical thinkers and problem solvers.
+\tbf{The ultimate goal of college teaching is to help students to grow to independent 
+and critical thinkers and problem solvers.}
 To work effectively towards that goal, I believe that a college teacher should
 (1) spark and sustain students' interest in the discipline,
 (2) provide them with an interactive environment for effective learning, and
 (3) develop their abilities to independently identify, formalize, analyze 
 and solve problems both theoretically and practically.
 
-To foster a student's interest in the current subject, 
-a teacher needs to be able to quickly draw attention of the students.
+\tbf{To foster a student's interest in the current subject, 
+a teacher needs to be able to quickly draw attention of the students.}
 Over the years in my Ph.D. career, I have given various technical
 presentations, oral and poster, at premium workshops and international conferences.
 Presenting research results at these venues in front of general audiences
 provides a good introduction to teaching a high level class in computer science,
 in that both, in a small portion of time, define the problem at hand, discuss motivation and related work,
 and show new methods and results.
-What's more, the instructor should show fun
-applications of the material whenever possible.
+\tbf{What's more, the instructor should show fun
+applications of the material whenever possible.}
 Designing and implementing a GUI that collects user constraints and preferences,
 and computes optimal items according to these specifications, was perhaps the most important part
 of an AI graduate class I took.
 Eventually, this project stimulated my research interests in answering theoretical and
 practical questions related to preferences.
-Moreover, hands-on learning often gets the ``Wow" response from the students, 
+\tbf{Moreover, hands-on learning often gets the ``Wow" response from the students, 
 quickly brings their focus onto the topic at hand,
-and ignites the desires in them to discover more.
+and ignites the desires in them to discover more.}
 During a lecture for the course on artificial intelligence,
 I was introducing the first-order logic and the generalized modus ponens
 rule.  Noticing that some students have difficulty understanding this
@@ -59,11 +60,11 @@ A feedback from the audience ``Ah, that's what it is!" indicates
 the significance of both exemplification and connecting the unknown with
 what is known in teaching.
 
-To guarantee effective learning process for the audience, a teacher should be committed to
-creating and maintaining an interactive and adaptive instructive environment both inside
-and outside the classroom.
-Timely interaction between the teacher and the students in class can lead to improved
-comprehension of the material just covered.
+\tbf{To guarantee effective learning process for the audience, a teacher should be committed to
+creating and maintaining an interactive and adaptive learning environment both inside
+and outside the classroom.}
+\tbf{Timely interaction between the teacher and the students in class can lead to improved
+comprehension of the material just covered.}
 When a problem seems common among many students, the instructor should quickly
 see it and address it.
 For instance, when pointers were introduced in CS 215 on C++ programming, 
@@ -73,26 +74,34 @@ declaration, I also came up with an in-class quiz for students to test whether t
 will be a compile-time or a run-time error.
 Having done the quiz and heard an explanation, the students became comfortable with
 pointers and constant variables, and this was reflected in later programming assignments.
-Adaptive teaching requires that instructors listen to their students, collect feedback
-from them, and adjust the rhythm of the course correspondingly.
-Furthermore, the instructor in charge of an inclusive class should try to adapt his teaching
-plans so that, ideally, students of all levels are accommodated.
-An inclusive classroom encourages every student to express her or his opinions and
-concerns.  Leading many lab sessions for programming classes,
+\tbf{Furthermore, the instructor in charge of an inclusive class should
+pay attention to subtle signals from the students, 
+and adjust the rhythm of the course correspondingly.}
+Leading many lab sessions for programming classes,
 I noticed there were several shy students who would not approach me with questions,
 which sometimes negatively reflected in their lab work.
 To help these students thrive and form a positive learning environment for everyone, 
 I interacted with all students to make sure everyone had made progress.
-The teacher should also make an effort, even offline, assuring that students with legitimate
-requests are answered.
+\tbf{The teacher should also make efforts, even offline, to assure that students with legitimate
+requests are answered.}
 Whenever there were students who needed to but could not, mostly due to schedule conflicts,
 talk to me in my office time, I always made efforts to meet them out of office hours and
 assure their issues solved.
 
-To prepare the students to become effective problem solvers, a teacher should promote
-constructive discussions with the students where problems are identified and even formalized.
-Also, a teacher is always a learner, responsible to stay active with the advances in the
-field, in order to better advise their students.
+\tbf{To prepare the students to become effective problem solvers, a teacher should promote
+constructive discussions where problems are identified and possible approaches are suggested.}
+For instance, in a flipped classroom, a student ``becomes" a teacher, presenting papers,
+or demonstrating implementations.  During the event, the mentor observes the student and
+provides helpful feedback, making sure the student knows if there are problems and, if so,
+how they could be possibly addressed.
+I view constructive discussions as the key element of providing mentorship.
+\tbf{Also, a college teacher is always a learning researcher, staying
+active with the advances in the field.}
+Amongst scientific disciplines,
+computer science has perhaps the most dynamic landscape, in the sense that
+frontiers are pushed forward almost on an annual basis.
+As a result, I see great value in keeping updated with changes in my fields,
+because I believe I will maintain highly motivated and well prepared as a mentor.
 Reflecting upon my own education, I have been very fortunate to have mentors
 that fortified my abilities to become a computer scientist.
 I would love to do likewise.
@@ -105,8 +114,8 @@ Based on my research training, I am also comfortable teaching introductory and h
 level courses in \tit{artificial intelligence},
 \tit{preferences and social choice}, and \tit{knowledge representation and reasoning}.
 In particular, I intend to bring research into classrooms and teach courses such as
-\tit{preference languages}, \tit{social choice and networks},
-\tit{practical preference learning}, and \tit{preferences in planning}.
+\tit{preference languages and theory}, \tit{social networks},
+\tit{preference learning}, and \tit{preference handling}.
 
 
 \end{document}
