--- a/TS_Xudong_Liu.tex
+++ b/TS_Xudong_Liu.tex
@@ -17,7 +17,7 @@
 
 \maketitle% prints the title block
 
-At an early age, I was immersed in an environment committed to academic achievement
+Growing up, I was immersed in an environment committed to academic achievement
 because my parents were teachers.
 They often spoke proudly about their students who
 struggled through tough days early on, overcame the hurdles with support of teachers, and 
@@ -28,49 +28,50 @@ I surely feel prepared to take the next step and teach at the college level.
 The way I see it,
 teaching is quintessential in helping people make a positive difference in their lives.
 
-\tbf{The ultimate goal of college teaching is to help students to grow into independent 
-and critical thinkers and problem solvers.}
-To work effectively towards that goal, I believe that a college teacher should:
+The ultimate goal of college teaching is to help students grow into independent 
+and critical thinkers and problem solvers.
+To work progressively towards that goal, I believe that a college teacher should:
 (1) spark and sustain students' interest in the discipline,
 (2) provide them with an interactive environment for effective learning, and
 (3) develop their abilities to identify, formalize,
 and solve problems.
 
-\tbf{To foster a student's interest in the current subject, 
-I believe that a teacher needs to be able to quickly draw the attention of the students.}
+To foster a student's interest in the current subject, 
+a teacher needs to keep the students engaged
+and unfold the material productively, as classes are typically not very long.
 Over the years in my Ph.D. career, I have given various technical
-talks at premium workshops and international conferences.
+talks at premier workshops and international conferences.
 Presenting research results at these venues in front of general audiences
 provides a good introduction to teaching a high level class in computer science,
 in that both, in a small portion of time, define the problem at hand, discuss motivation and related work,
 and show new methods and results.
-\tbf{What's more, I see great value in hands-on learning, where the instructor shows fun
-applications of the material whenever possible.}
+What's more, I see great value in hands-on learning, where the instructor offers fun
+applications of the material whenever possible.
 Designing and implementing a GUI that collects and reasons about user constraints and preferences
-was perhaps the most inspiring part of an AI graduate class I took.
+was one of the most inspiring projects in all my graduate classes.
 Eventually, this project stimulated my research interests in answering theoretical and
 practical questions related to preferences.
 Hence, I plan to integrate teaching with research via exciting projects that
 drive the students to discover more.
-\tbf{Furthermore, 
-introducing hard concepts through intuitive examples often
+
+Introducing hard concepts through intuitive examples often
 gets the ``Wow" response from the students, and
-encourages them to dig deeper.}
+encourages them to dig deeper.
 During a lecture for the course on artificial intelligence,
 I was introducing the first-order logic and the generalized modus ponens
 rule.  Noticing that some students had difficulty understanding this
 important inference rule, I illustrated it with the 
 Aristotle's syllogism and explained how unification works in the rule.
 An acknowledgment from the audience ``Ah, that's what it is!" indicates
-the significance of exemplification and of connecting the unknown with
-what is known in teaching.
+the significance of exemplification, and of connecting the unknown with
+what is known, in teaching.
 
 To guarantee effective learning for the audience, 
-I believe that a teacher should be committed to
-creating and maintaining an interactive and adaptive learning environment both inside
+I hold that a teacher should be committed to
+creating an interactive and adaptive learning environment both inside
 and outside the classroom.
-\tbf{Timely interaction between the teacher and the students in class can lead to improved
-comprehension of the material just covered.}
+Timely interaction between the teacher and the students in class can lead to improved
+comprehension of the material just covered.
 When a problem seems common among many students, the instructor should quickly
 see it and address it.
 For instance, when pointers were introduced in CS 215 on C++ programming, 
@@ -80,36 +81,37 @@ declaration, I also came up with an in-class quiz for students to test whether t
 will be a compile-time or a run-time error.
 Having done the quiz and heard an explanation, the students became comfortable with
 pointers and constant variables, and this was reflected in later programming assignments.
-\tbf{Moreover, the instructor in charge of an inclusive class should
+
+The instructor in charge of an inclusive class should
 pay attention to subtle signals from the students, 
-and adjust the rhythm of the course correspondingly.}
+and adjust the rhythm of the course correspondingly.
 Leading many lab sessions for programming classes,
 I noticed there were several shy students who would not approach me with questions,
 which sometimes negatively reflected in their lab work.
-To help these students thrive and form a positive learning environment for everyone, 
+To help these students thrive and form a effective learning environment for everyone, 
 I interacted with all students to make sure everyone had made progress.
-\tbf{The teacher should also make efforts, even offline, 
-to assure that students with legitimate requests are answered.}
+Moreover, the teacher should make efforts, even offline, 
+to assure that students with legitimate requests are answered.
 Whenever there were students who needed to but could not
-talk to me in my office, mostly due to schedule conflicts, 
-I would always make an effort to meet them outside of office hours and
-to assure their issues were solved.
+meet me in my office, mostly due to schedule conflicts, 
+I would always make an effort to talk to them outside of office hours and
+to make certain their issues were solved.
 
-\tbf{To prepare students to become effective problem solvers, 
+To prepare students to become efficient problem solvers, 
 I believe that a teacher should promote
-constructive discussions where problems are identified and possible approaches are suggested.}
-For instance, in a flipped classroom, a student ``becomes" a teacher, presenting papers,
+constructive discussions where problems are identified and possible approaches are suggested.
+For instance, in a flipped classroom, every student acts as a teacher, presenting papers,
 or demonstrating implementations.  During the event, the mentor observes the student and
 provides helpful feedback, making sure the student knows if there are problems and, if so,
 how they could possibly be addressed.
 I view constructive discussions as the key element of providing mentorship.
-\tbf{A college teacher, in my opinion, is always a learning researcher, staying
-active with the advances in the field.}
+A college teacher, in my opinion, is always a learning researcher, staying
+active with the advances in the field.
 Amongst scientific disciplines,
 computer science has perhaps the most dynamic landscape, in the sense that
 frontiers are pushed forward almost on an annual basis.
-As a result, I see great value in keeping updated with changes in my area,
-because I believe I will remain highly motivated and well prepared as a mentor.
+As a consequence, I spot great rewards in keeping up-to-date in my area,
+because it will help me remain highly motivated and well prepared as a mentor.
 Reflecting upon my own education, I have been very fortunate to have mentors
 that fortified my abilities to become a computer scientist.
 I would love to do likewise.
@@ -118,7 +120,7 @@ From my teaching experience, I am confident teaching core courses such as
 \tit{programming languages}, \tit{data structures and algorithms}, \tit{software engineering},
 \tit{logics and discrete mathematics},
 \tit{computer networks}, \tit{database systems}, and \tit{operating systems}.
-Based on my research training, I am also comfortable teaching introductory and high 
+Based on my research training, I am comfortable teaching introductory and high 
 level courses in \tit{artificial intelligence},
 \tit{preferences and social choice}, and \tit{knowledge representation and reasoning}.
 In particular, I intend to bring research into classrooms and teach courses such as
@@ -127,8 +129,3 @@ In particular, I intend to bring research into classrooms and teach courses such
 
 
 \end{document}
-
-
-
-
-
