Updated the organization.

--- a/TS_Xudong_Liu.tex
+++ b/TS_Xudong_Liu.tex
@@ -9,7 +9,7 @@
 \newcommand{\tit}[1]{\textit{#1}}
 \newcommand{\tbf}[1]{\textbf{#1}}
 
-\title{Teaching Statement\vspace{-0.4cm}}
+\title{Teaching Statement}
 \author{Xudong Liu}
 \date{}
 
@@ -36,26 +36,17 @@ To work progressively towards that goal, I believe that a college teacher should
 (3) develop their abilities to identify, formalize,
 and solve problems.
 
-To foster a student's interest in the current subject, 
-a teacher needs to keep the students engaged
-and unfold the material productively, as classes are typically not very long.
-Over the years in my Ph.D. career, I have given various technical
-talks at premier workshops and international conferences.
-Presenting research results at these venues in front of general audiences
-provides a good introduction to teaching a high level class in computer science,
-in that both, in a small portion of time, define the problem at hand, discuss motivation and related work,
-and show new methods and results.
-What's more, I see great value in hands-on learning, where the instructor offers fun
-applications of the material whenever possible.
+I see great value in hands-on learning, where the instructor offers fun
+applications of the material whenever possible,
+to foster students' interest in the current subject.
 Designing and implementing a GUI that collects and reasons about user constraints and preferences
 was one of the most inspiring projects in all my graduate classes.
 Eventually, this project stimulated my research interests in answering theoretical and
 practical questions related to preferences.
 Hence, I plan to integrate teaching with research via exciting projects that
 drive the students to discover more.
-
-Introducing hard concepts through intuitive examples often
-gets the ``Wow" response from the students, and
+Furthermore, introducing hard concepts through intuitive examples often
+gets the ``Wow" response from the students and
 encourages them to dig deeper.
 During a lecture for the course on artificial intelligence,
 I was introducing the first-order logic and the generalized modus ponens
@@ -65,6 +56,15 @@ Aristotle's syllogism and explained how unification works in the rule.
 An acknowledgment from the audience ``Ah, that's what it is!" indicates
 the significance of exemplification, and of connecting the unknown with
 what is known, in teaching.
+
+An effective teacher also needs to keep the students engaged
+and unfold the material productively, as classes are typically not very long.
+Over the years in my Ph.D. career, I have given various technical
+talks at premier workshops and international conferences.
+Presenting research results at these venues in front of general audiences
+provides a good introduction to teaching a high level class in computer science,
+in that both, in a small portion of time, define the problem at hand, discuss motivation and related work,
+and show new methods and results.
 
 To guarantee effective learning for the audience, 
 I hold that a teacher should be committed to
@@ -100,15 +100,15 @@ to make certain their issues were solved.
 To prepare students to become efficient problem solvers, 
 I believe that a teacher should promote
 constructive discussions where problems are identified and possible approaches are suggested.
-For instance, in a flipped classroom, every student acts as a teacher, presenting papers,
+For instance, in a flipped classroom every student acts as a teacher by presenting papers,
 or demonstrating implementations.  During the event, the mentor observes the student and
-provides helpful feedback, making sure the student knows if there are problems and, if so,
+provides helpful feedback, ensuring the student knows if there are problems and, if so,
 how they could possibly be addressed.
 I view constructive discussions as the key element of providing mentorship.
 A college teacher, in my opinion, is always a learning researcher, staying
 active with the advances in the field.
 Amongst scientific disciplines,
-computer science has perhaps the most dynamic landscape, in the sense that
+computer science has perhaps one of the most dynamic landscapes, in the sense that
 frontiers are pushed forward almost on an annual basis.
 As a consequence, I spot great rewards in keeping up-to-date in my area,
 because it will help me remain highly motivated and well prepared as a mentor.
