Updated with MT's comments.

--- a/TS_Xudong_Liu.tex
+++ b/TS_Xudong_Liu.tex
@@ -23,14 +23,14 @@ They often spoke proudly about their students who
 struggled through tough days early on, overcame the hurdles with support of teachers, and 
 achieved excellence inside and outside of school. 
 Hoping to earn the same sense of satisfaction, I have always had a dream of becoming a teacher.
-As I am finishing graduate school, where I have gained various teaching experiences,
+As I am finishing graduate school, where I have flourished in teaching,
 I surely feel prepared to take the next step and teach at the college level.
 The way I see it,
 teaching is quintessential in helping people make a positive difference in their lives.
 
 The ultimate goal of college teaching is to help students grow into independent 
 and critical thinkers and problem solvers.
-To work progressively towards that goal, I believe that a college teacher should:
+To work towards that goal, I believe that a college teacher should:
 (1) spark and sustain students' interest in the discipline,
 (2) provide them with an interactive environment for effective learning, and
 (3) develop their abilities to identify, formalize,
@@ -110,13 +110,13 @@ active with the advances in the field.
 Amongst scientific disciplines,
 computer science has perhaps one of the most dynamic landscapes, in the sense that
 frontiers are pushed forward almost on an annual basis.
-As a consequence, I spot great rewards in keeping up-to-date in my area,
+As a consequence, I see it is necessary to keep up-to-date in my area,
 because it will help me remain highly motivated and well prepared as a mentor.
 Reflecting upon my own education, I have been very fortunate to have mentors
 that fortified my abilities to become a computer scientist.
 I would love to do likewise.
 
-From my teaching experience, I am confident teaching core courses such as
+From my teaching experience, I am confident that I can competently teach courses such as
 \tit{programming languages}, \tit{data structures and algorithms}, \tit{software engineering},
 \tit{logics and discrete mathematics},
 \tit{computer networks}, \tit{database systems}, and \tit{operating systems}.
