Really minor changes.

--- a/TS_Xudong_Liu.tex
+++ b/TS_Xudong_Liu.tex
@@ -100,7 +100,7 @@ to make certain their issues were solved.
 To prepare students to become efficient problem solvers, 
 I believe that a teacher should promote
 constructive discussions where problems are identified and possible approaches are suggested.
-For instance, in a flipped classroom every student acts as a teacher by presenting papers,
+For instance, in a flipped classroom, every student acts as a teacher by presenting papers
 or demonstrating implementations.  During the event, the mentor observes the student and
 provides helpful feedback, ensuring the student knows if there are problems and, if so,
 how they could possibly be addressed.
