--- a/TS_Xudong_Liu.tex
+++ b/TS_Xudong_Liu.tex
@@ -125,7 +125,7 @@ level courses in \tit{artificial intelligence},
 \tit{preferences and social choice}, and \tit{knowledge representation and reasoning}.
 In particular, I intend to bring research into classrooms and teach courses such as
 \tit{preference languages and theory}, \tit{social networks},
-\tit{preference learning}, and \tit{preference handling}.
+\tit{preference learning}, and \tit{logics and declarative programming}.
 
 
 \end{document}
